tests/errors/cannot_access_field_on_non-struct.b
fn main() {
    int x = 5;
    int y = x.foo;
}
